[gd_scene load_steps=3 format=3 uid="uid://bifbc8375xc16"]

[ext_resource type="Script" path="res://Scripts/s_histogram.gd" id="1_h4qdb"]
[ext_resource type="PackedScene" uid="uid://dexludemq64ko" path="res://Scenes/SC_Background.tscn" id="2_ee6jw"]

[node name="SC_Histogram" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h4qdb")
axis_color = Color(0, 0, 0, 1)
label_text_color = Color(0, 0, 0, 1)
input_text_color = Color(0, 0, 0, 1)
bar_text_color = Color(0, 0, 0, 1)
bar_first_color = Color(0.556863, 0.721569, 0.898039, 1)
bar_last_color = Color(0.713726, 0.27451, 0.882353, 1)
normal_curve_color = Color(0.713726, 0.27451, 0.372549, 1)
mean_line_color = Color(0.32549, 0.478431, 0.352941, 1)
std_dev_line_color = Color(0.556863, 0.721569, 0.898039, 1)

[node name="Background" parent="." instance=ExtResource("2_ee6jw")]

[node name="SplitContainer" type="SplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 250

[node name="ScrollContainer" type="ScrollContainer" parent="SplitContainer"]
layout_mode = 2

[node name="InputContainer" type="VBoxContainer" parent="SplitContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="AddDataLabel" type="Label" parent="SplitContainer/ScrollContainer/InputContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Введите данные"

[node name="DataInput" type="TextEdit" parent="SplitContainer/ScrollContainer/InputContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SplitContainer/ScrollContainer/InputContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SplitContainer/ScrollContainer/InputContainer"]
layout_mode = 2

[node name="NumOfbinsLabel" type="Label" parent="SplitContainer/ScrollContainer/InputContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Количество столбцов:"

[node name="BinSlider" type="HSlider" parent="SplitContainer/ScrollContainer/InputContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BinValueLabel" type="Label" parent="SplitContainer/ScrollContainer/InputContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SplitContainer/ScrollContainer/InputContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckboxLabel" type="Label" parent="SplitContainer/ScrollContainer/InputContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Подписывать все стобцы"

[node name="LabelAllBinsCheckBox" type="CheckBox" parent="SplitContainer/ScrollContainer/InputContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AnalyzeButton" type="Button" parent="SplitContainer/ScrollContainer/InputContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "AnalyzeButton"

[node name="StatsLabel" type="Label" parent="SplitContainer/ScrollContainer/InputContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
autowrap_mode = 1

[node name="DiagramContainer" type="Control" parent="SplitContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1

[node name="SaveButton" type="Button" parent="SplitContainer/DiagramContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "Сохранить"
